--- a/Task-1- Portfolio/Style.css
+++ b/Task-1- Portfolio/Style.css
@@ -56,7 +56,7 @@ nav a:hover {
   color: var(--blue);
 }
 
-/* HOME */
+/* Home */
 .home {
   min-height: 100vh;
   display: flex;
@@ -127,7 +127,7 @@ nav a:hover {
   to { opacity: 1; transform: translateX(0); }
 }
 
-/* RESPONSIVE */
+/* Responsive */
 @media (max-width: 768px) {
   nav ul { display: none; }
 
@@ -138,7 +138,7 @@ nav a:hover {
 
   
 }
-/* --ABOUT SECTION --*/
+/* --About Section --*/
 
 .dark-bg {
   background: (circle at top, #020617, #020617);
@@ -431,7 +431,7 @@ html {
     .title { font-size: 2.5rem; }
 }
 
-/* PROJECT */
+/* Project */
 
 .projects-section {
     background-color: #030712;
@@ -486,7 +486,7 @@ html {
 }
 .blue-text { color: #3b82f6; }
 
-/* GitHub & Demo Icons Styling */
+/* Github & Demo Icons Styling */
 .proj-links a {
     color: #9ca3af;
     font-size: 1.2rem;
@@ -525,7 +525,7 @@ html {
     }
 }
 
-/* CONTACT */
+/* Contact */
 * {
     margin: 0;
     padding: 0;
@@ -725,7 +725,6 @@ nav a:hover::after {
 
 /*  ---for mobaile screen---*/
 
-
 @media (max-width: 768px) {
     /* 1. Navigation Fix */
     nav {
@@ -892,7 +891,7 @@ nav a:hover::after {
         font-size: 20px;
       }
     
-    /* 5. Skills Fix */
+    /* 5. Skills  */
     .title {
         font-size: 2.2rem;
     }
